--- a/start.html
+++ b/start.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documented</title>
 </head>
 <body>
     <h1>my start file is not index.html file</h1>
     <h3>new destination</h3>
+    <div>
+        <h3>new blog</h3>
+        <h5>look mama, i can write a blog</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, nam modi? Quasi quaerat consectetur earum accusantium. Qui vel autem voluptas. Hic voluptas aliquid velit, explicabo aperiam fuga repellendus modi illo voluptatum a doloribus consectetur recusandae optio adipisci saepe cupiditate debitis.</p>
+    </div>
     <img src="tom.png" alt="">
 </body>
 </html>
